--- a/app/views/docs/index.html.erb
+++ b/app/views/docs/index.html.erb
@@ -9,8 +9,8 @@
       <th>Feature Title</th>
   
       <th>Development Starts (tentative)</th>
-      <th><%= sort_link "qaOwner","Priority" %></th>
-      <th><%= sort_link "documentStatus", "Status" %></th>
+      <th>Priority</th>
+      <th>Status</th>
       
     </tr>
   </thead>
